@@ -17,6 +17,9 @@ checkbox (0.16.13) UNRELEASED; urgency=low
 
   [ Jeff Marcom ]
   * scripts/network - added iperf test benchmark testing capabilities. 
+
+   [ Yung Shen ]
+  * jobs/keys.txt.in - added keys/hibernate job.
  
  -- Brendan Donegan <brendan.donegan@canonical.com>  Sat, 05 Oct 2013 11:18:17 +0100
 
